--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:label="@string/title_activity_tasks"
-            android:name=".TasksActivity"
-            android:screenOrientation="portrait">
-        </activity>
-        <activity
-            android:label="@string/title_activity_login"
+            android:label="@string/app_name"
             android:name=".LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -27,6 +22,16 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity
+            android:label="@string/title_activity_tasks"
+            android:name=".TasksActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:label="@string/title_activity_games"
+            android:name=".GamesActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
