--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:label="@string/app_name"
-            android:name=".LoginActivity"
+            android:name=".activities.LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -25,12 +25,12 @@
         </activity>
         <activity
             android:label="@string/title_activity_tasks"
-            android:name=".TasksActivity"
+            android:name=".activities.TasksActivity"
             android:screenOrientation="portrait">
         </activity>
         <activity
             android:label="@string/title_activity_games"
-            android:name=".GamesActivity"
+            android:name=".activities.GamesActivity"
             android:screenOrientation="portrait">
         </activity>
     </application>
