--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,13 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
+    implementation 'com.mcxiaoke.volley:library-aar:1.0.0'
     implementation 'com.android.support:recyclerview-v7:27.1.0'
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support:design:27.1.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'net.hockeyapp.android:HockeySDK:5.1.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'com.android.support:palette-v7:27.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.2.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
 }
